--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "huaan",
-    "appid" : "",
-    "description" : "",
+    "appid" : "__UNI__5074B11",
+    "description" : "华安保险商城",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
@@ -48,6 +48,21 @@
         }
     },
     "h5" : {
-        "template" : "index.html"
+        "template" : "index.html",
+        "title" : "华安",
+        "router" : {
+            "mode" : "history"
+        },
+        "devServer" : {
+            "port" : 8000, //端口号
+            "disableHostCheck" : true,
+            "proxy" : {
+                "/micro-plat" : {
+                    "target" : "https://mtest.sinosafe.com.cn", //目标接口域名
+                    "changeOrigin" : true, //是否跨域
+                    "secure" : false // 设置支持https协议的代理
+                }
+            }
+        }
     }
 }
